--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,10 @@
 *.zip
 *.tar.gz
 *.rar
-/.idea
+# /.idea
+# sunshineAirline0p1.iml
 /out
 /target
-sunshineAirline0p1.iml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
