--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /.idea
 /out
 /target
+/src/main/resources/db.properties
 sunshineAirline0p1.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
